Added new route with delete users.
